# Kappa-Engine

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeUserPresets.json  Doxyfile  README.md  RFC9785.txt  conanfile.py  conanfile.txt
.github/workflows/: conan-build.yml  conan.yml  cpp-linter.yml  unit-tests.yml
KappaEngine/: EntityManager.hpp  GameManager.hpp  Input.hpp  Scene.hpp  SystemManager.hpp  Time.hpp  lib.hpp
KappaEngine/Components/: Camera.hpp  CollideBox.hpp  Health.hpp  IComponent.hpp  NetworkComponent.hpp  RigidBody.hpp  SpriteRender.hpp  SpriteRenderer.hpp  Transform.hpp
KappaEngine/Entity/: Entity.hpp
KappaEngine/Network/: ClientInterface.hpp  NetworkConnection.hpp  NetworkQueue.hpp  ServerInterface.hpp  net_message.h
KappaEngine/Systems/: CameraSystem.hpp  CollideBoxSystem.hpp  ISystem.hpp  NetworkSystem.hpp  RigidBodySystem.hpp  SpriteRenderSystem.hpp  SpriteRendererSystem.hpp
docs/html/: _button_component_8hpp.html  _button_component_8hpp.js  _button_component_8hpp_source.html  _camera_8hpp.html  _camera_8hpp.js  _camera_8hpp__dep__incl.dot  _camera_8hpp__incl.dot  _camera_8hpp_source.html  _client_interface_8hpp.html  _client_interface_8hpp.js  _client_interface_8hpp_source.html  _collide_box_8hpp.html  _collide_box_8hpp.js  _collide_box_8hpp__incl.dot  _collide_box_8hpp_source.html  _collide_box_system_8cpp.html  _collide_box_system_8cpp__incl.dot  _collide_box_system_8cpp_source.html  _collide_box_system_8hpp.html  _collide_box_system_8hpp.js  _collide_box_system_8hpp__incl.dot  _collide_box_system_8hpp_source.html  _command_8cpp_source.html  _command_8hpp.html  _command_8hpp.js  _command_8hpp__dep__incl.dot  _command_8hpp_source.html  _console_8cpp_source.html  _console_8hpp.html  _console_8hpp.js  _console_8hpp__dep__incl.dot  _console_8hpp_source.html  _entity_8hpp.html  _entity_8hpp.js  _entity_8hpp__dep__incl.dot  _entity_8hpp__incl.dot  _entity_8hpp_source.html  _entity_manager_8cpp.html  _entity_manager_8cpp__incl.dot  _entity_manager_8cpp_source.html  (+385 more)
docs/latex/: _button_component_8hpp.tex  _button_component_8hpp.tex.tmp  _button_component_8hpp__incl.dot  _button_component_8hpp_source.tex  _camera_8hpp.tex  _camera_8hpp.tex.tmp  _camera_8hpp__dep__incl.dot  _camera_8hpp__incl.dot  _camera_8hpp_source.tex  _client_interface_8hpp.tex  _client_interface_8hpp__dep__incl.dot  _client_interface_8hpp__incl.dot  _client_interface_8hpp_source.tex  _collide_box_8hpp.tex  _collide_box_8hpp__incl.dot  _collide_box_8hpp_source.tex  _collide_box_system_8cpp.tex  _collide_box_system_8cpp__incl.dot  _collide_box_system_8cpp_source.tex  _collide_box_system_8hpp.tex  _collide_box_system_8hpp__dep__incl.dot  _collide_box_system_8hpp__incl.dot  _collide_box_system_8hpp_source.tex  _command_8cpp_source.tex  _console_8cpp_source.tex  _console_8hpp.tex  _console_8hpp__incl.dot  _console_8hpp_source.tex  _entity_8hpp.tex  _entity_8hpp__dep__incl.dot  _entity_8hpp__incl.dot  _entity_8hpp_source.tex  _entity_manager_8cpp.tex  _entity_manager_8cpp_source.tex  _entity_manager_8hpp.tex  _entity_manager_8hpp__dep__incl.dot  _entity_manager_8hpp__incl.dot  _entity_manager_8hpp_source.tex  _game_manager_8cpp_source.tex  _game_manager_8hpp.tex  (+151 more)
include/: EntityManager.hpp  GameManager.hpp  Scene.hpp  SystemManager.hpp
include/Components/: NetworkComponent.hpp
include/Entity/: Entity.hpp
include/KappaEngine/: ConfigManager.hpp  ConfigurationManager.hpp  EntityManager.hpp  GameManager.hpp  Input.hpp  Scene.hpp  SystemManager.hpp  Time.hpp
include/KappaEngine/Components/: Animation.hpp  Animator.hpp  Camera.hpp  CollideBox.hpp  IComponent.hpp  INetworkable.hpp  NetworkComponent.hpp  Parallax.hpp  ParallaxComponent.hpp  RigidBody.hpp  Sounds.hpp  SpriteRenderer.hpp  Transform.hpp  TriggerBox.hpp
include/KappaEngine/Console/: Command.hpp  Console.hpp
include/KappaEngine/Entity/: Entity.hpp
include/KappaEngine/Interfaces/: ButtonComponent.hpp  ButtonInterface.hpp  Canvas.hpp  IInterface.hpp  ImageComponent.hpp  ImageInterface.hpp  InputInterface.hpp  TextComponent.hpp  TextInterface.hpp  Utils.hpp
include/KappaEngine/Managers/: ConfigManager.hpp  InterfaceManager.hpp  SoundManager.hpp  TextureManager.hpp  TranslateManager.hpp
include/KappaEngine/Network/: ClientInterface.hpp  MessageDefine.hpp  NetworkConnection.hpp  NetworkQueue.hpp  ServerInterface.hpp  net_message.h
include/KappaEngine/Systems/: AnimationSystem.hpp  CollideBoxSystem.hpp  ISystem.hpp  NetworkSystem.hpp  ParallaxSystem.hpp  RigidBodySystem.hpp  SoundSystem.hpp  SpriteRendererSystem.hpp  TriggerBoxSystem.hpp
include/Network/: ClientInterface.hpp  NetworkConnection.hpp  ServerInterface.hpp
include/Systems/: ISystem.hpp  NetworkSystem.hpp  RigidBodySystem.hpp  SpriteRendererSystem.hpp
src/: ConfigManager.cpp  ConfigurationManager.cpp  EntityManager.cpp  GameManager.cpp  Input.cpp  Scene.cpp  SystemManager.cpp  Time.cpp  lib.cpp
src/Console/: Command.cpp  Console.cpp
src/Interfaces/: ButtonComponent.cpp  ButtonInterface.cpp  Canvas.cpp  ImageComponent.cpp  ImageInterface.cpp  InputInterface.cpp  TextComponent.cpp  TextInterface.cpp  Utils.cpp
src/Managers/: ConfigManager.cpp  InterfaceManager.cpp  SoundManager.cpp  TextureManager.cpp  TranslateManager.cpp
src/Network/: NetworkConnection.cpp
src/Systems/: AnimationSystem.cpp  CameraSystem.cpp  CollideBoxSystem.cpp  NetworkSystem.cpp  ParallaxSystem.cpp  RigidBodySystem.cpp  SoundSystem.cpp  SpriteRenderSystem.cpp  SpriteRendererSystem.cpp  TriggerBoxSystem.cpp
test_package/: .gitignore  CMakeLists.txt  CMakeUserPresets.json  conanfile.py
test_package/src/: test.cpp
tests/: Test_EntityManager.cpp  Test_GameManager.cpp  Test_InterfaceManager.cpp  Test_ParallaxSystem.cpp  Test_main.cpp
(+302 files in other folders)
